# DevShowcase

./: build.gradle.kts  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: selector_box_stroke.xml  selector_hint_colors.xml
app/src/main/res/drawable/: bg_circular_back_button.xml  bg_gradient_news_header.xml  bg_gradient_news_title.xml  bg_news_content.xml  bg_rounded_an_primary_variant.xml  bg_search_edittext.xml  bg_tab_layout.xml  bg_wind_white.xml  ic_alert_triangle_24dp.xml  ic_api_ninjas.xml  ic_arrow_wind_white.xml  ic_clear_day_24.xml  ic_cloudy_24.xml  ic_copyright_24dp.xml  ic_finlight.xml  ic_launcher_foreground.xml  ic_linkedin.xml  ic_loading_white.xml  ic_photo_24dp.xml  ic_photon.xml  ic_rain_24.xml  ic_search_24dp.xml  ic_snow_24.xml  ic_wave_green.xml
app/src/main/res/layout/: activity_main.xml  bottom_sheet_web_view.xml  forecast_view.xml  fragment_news.xml  fragment_news_detail.xml  fragment_profile.xml  fragment_profile_contact.xml  fragment_profile_credit.xml  fragment_weather.xml  fragment_weather_detail.xml  item_auto_complete.xml  item_copyright.xml  item_forecast.xml  item_loading.xml  item_news.xml  item_search_bar_auto_complete.xml  item_title.xml  (+10 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libraries/cache/: build.gradle.kts
libraries/data/: build.gradle.kts
libraries/domain/: build.gradle.kts
libraries/kit/: build.gradle.kts  proguard-rules.pro
libraries/kit/src/main/cpp/: CMakeLists.txt  main.cpp
libraries/remote/: build.gradle.kts
(+203 files in other folders)
